--- a/Flexbox_Lv-3_1/index.html
+++ b/Flexbox_Lv-3_1/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="logo">Shapely Demo</a>
+        <a href="#" class="logo">Shapely Demo 1</a>
         <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#blog">BLOG</a></li>
