Creation of Main (Hero-Section) &  Styling of Nav-Bar and Hero Section

--- a/Flexbox_Lv-3_1/index.html
+++ b/Flexbox_Lv-3_1/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="logo">Shapely Demo 1</a>
+        <a href="#" class="logo">Shapely Demo</a>
         <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#blog">BLOG</a></li>
@@ -20,5 +20,17 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <h1>We Change Everything WordPress</h1>
+        <p class="hero-paragraph">
+          This is the only WordPress theme you will ever want to use.
+        </p>
+        <article>
+          <a class="purple-button" href="#About-the-tests">READ MORE</a>
+          <a class="white-button" href="#SHOP">DOWNLOAD NOW</a>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
